# obs-studio

./: .gitmodules  CMakeLists.txt  OneDark.json  appveyor.yml
CI/: before-deploy-win-rematrix-filter.cmd
UI/: CMakeLists.txt  adv-audio-control.cpp  adv-audio-control.hpp  auth-base.cpp  auth-base.hpp  auth-caffeine.cpp  auth-caffeine.hpp  auth-oauth.cpp  auth-oauth.hpp  filters-checkbox.cpp  filters-checkbox.hpp  hotkey-edit.cpp  mixer-tree.cpp  mixer-tree.hpp  obs-app.cpp  properties-view.cpp  properties-view.hpp  source-tree.cpp  source-tree.hpp  visibility-item-widget.cpp  volume-control.cpp  volume-control.hpp  window-basic-auto-config-test.cpp  window-basic-auto-config.cpp  window-basic-auto-config.hpp  window-basic-filters.cpp  window-basic-filters.hpp  window-basic-main-dropfiles.cpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-preview.hpp  window-basic-properties.cpp  window-basic-properties.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-main.hpp
UI/data/locale/: en-US.ini
UI/forms/: AutoConfigStreamPage.ui  OBSBasic.ui  OBSBasicFilters.ui  OBSBasicSettings.ui  obs.qrc
UI/frontend-plugins/frontend-tools/: CMakeLists.txt
UI/win-update/updater/: CMakeLists.txt  hash.cpp  http.cpp  patch.cpp  updater.cpp
cmake/Modules/: CopyMSVCBins.cmake  FindCaffeine.cmake  FindLibcaffeine.cmake
docs/sphinx/: reference-libobs-graphics-effects.rst
libobs/: obs-audio-controls.c  obs-audio-controls.h  obs-audio.c  obs-config.h  obs-data.c  obs-data.h  obs-hotkeys.h  obs-internal.h  obs-midikeys.h  obs-module.c  obs-output.c  obs-output.h  obs-properties.c  obs-properties.h  obs-scene.c  obs-scene.h  obs-source-transition.c  obs-source.c  obs.c  obs.h  sse-trig.h
libobs-d3d11/: d3d11-shader.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp
libobs-opengl/: gl-shader.c  gl-subsystem.c  gl-subsystem.h
libobs-vulkan/: CMakeLists.txt  vulkan-shader.cpp  vulkan-subsystem.cpp  vulkan-subsystem.hpp  vulkan.hpp
libobs-vulkan/vulkan_utils/: utils.cpp  utils.hpp
libobs/callback/: calldata.h  signal.c  signal.h
libobs/graphics/: device-exports.h  effect-parser.c  effect-parser.h  effect.c  effect.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h  shader-parser.c  texture-render.c
libobs/media-io/: audio-io.h
libobs/util/: darray.h
plugins/: CMakeLists.txt
plugins/audio-visualizer/: CMakeLists.txt  audio-visualizer.c
plugins/caffeine/: CMakeLists.txt  README.rst  caffeine-api.c  caffeine-api.h  caffeine-auth.c  caffeine-auth.h  caffeine-config.h  caffeine-foreground-process.c  caffeine-foreground-process.h  caffeine-log.h  caffeine-module.c  caffeine-output.c  caffeine-service.c  caffeine-service.h  caffeine-settings.h
plugins/caffeine/data/locale/: en-US.ini
plugins/ffmpeg-eq/: CMakeLists.txt  ffmpeg-eq.cpp  fft.c  fft.h
plugins/gst-plugin/: gst-plugin.c
plugins/image-source/: CMakeLists.txt  color-source.cpp  image-source.cpp  obs-mediabay.cpp  obs-slideshow.cpp
plugins/obs-ffmpeg/: obs-ffmpeg-source.c
plugins/obs-filters/: CMakeLists.txt  OBSAudioMeter.cpp  OBSAudioMeter.h  QGainWidget.h  gain-filter.cpp  obs-filters.c
plugins/obs-layer-view/: obs-layer-view.hpp
plugins/obs-midi/: CMakeLists.txt
plugins/obs-qsv11/: obs-qsv11.c
plugins/obs-shader-filter/: CMakeLists.txt  README.md  fft.c  obs-shader-filter.c  obs-shader-filter.cpp  obs-shader-filter.hpp  random-num.cpp  random-num.h  random-number-generator.cpp  random-number-generator.h  tinyexpr.c  tinyexpr.cpp  tinyexpr.h
plugins/obs-shader-filter/data/: default.effect
plugins/obs-shader-filter/data/locale/: en-US.ini
plugins/obs-voicemeeter/: obs-voicemeeter.cpp
plugins/obs-vst3/: CMakeLists.txt  obs-vst3.cpp  obs-vst3.hpp
plugins/opencv-out/: CMakeLists.txt  opencv-out.c  opencv-out.cpp
plugins/osc-juce/: CMakeLists.txt  osc-juce.cpp  osc-juce.hpp
plugins/rtmp-services/data/: services.json
plugins/win-asio/: CMakeLists.txt  asio-input.cpp  asioselector.cpp  asioselector.h  circle-buffer.h
plugins/win-asio/data/locale/: en-US.ini
plugins/win-capture/: game-capture.c  window-helpers.c
